prevent overflow-x scroll when modal is open

--- a/src/styles/layout/modal.scss
+++ b/src/styles/layout/modal.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     font-size:3rem;
+    overflow-x:hidden;
     background-color: rgba(0,0,0,0.85);
  /*    box-shadow:0 0 0 30px black;
     -webkit-box-shadow: 0 0 0 
